k8s-manifests/profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: vignesh342/profile-service:v2
          ports:
            - containerPort: 3002
